--- a/web/login.html
+++ b/web/login.html
@@ -10,16 +10,16 @@
         <h1>在线课程注册系统</h1>
         <div class="mdiv">
             <h2>用户登录</h2>
-            <div class="div_role">
+            <div class="roles">
                 <button class="role" id="stu" type="submit">学生</button>
                 <button class="role" id="tch" type="submit">教师</button>
             </div>
-            <div class="div_inputs">
-                <div class="div_input">
+            <div class="inputs">
+                <div>
                     手机号<br/>
                     <input class="input" type="text" name="telephone" id="telephone" autocomplete="off">
                 </div>
-                <div class="div_input">
+                <div>
                     密码<br/>
                     <input class="input" type="password" name="password" id="password">
                 </div>
