--- a/web/platform.html
+++ b/web/platform.html
@@ -5,16 +5,10 @@
         <title>Course Registration Platform</title>
         <link rel="stylesheet" href="css/style.css">
         <script src="js/jquery-1.11.0.min.js" type="text/javascript"></script>
+        <script src="js/menu.js" type="text/javascript"></script>
     </head>
     <body class="platform">
-        <div class="menu">
-            <p class="title">在线课程注册系统</p>
-            <p class="option_left">免费课程</p>
-            <p class="option_left">付费课程</p>
-            <p class="option_right">user_name</p>
-            <p class="option_right">我的订单</p>
-            <p class="option_right">我的课程</p>
-        </div>
+        <div class="menu" id="menu"></div>
         <div class="free_course">
             <h1>免费课程</h1>
             <!-- exmaples -->
@@ -36,7 +30,7 @@
         <div class="paid_course">
             <h1>付费课程</h1>
             <!-- exmaples -->
-            <div class="course" id="free_course1">
+            <div class="course" id="paid_course1">
                 <p class="title">course_name</p>
                 <div class="v1">
                     <p class="start_time">start_time</p>
@@ -53,6 +47,8 @@
         </div>
     </body>
     <script>
-        
+        window.onload = function() {
+            setMenu();
+        }
     </script>
 </html>
