--- a/web/register.html
+++ b/web/register.html
@@ -39,16 +39,19 @@
                 </div>
             </div>
             <button id="get_otp">获取验证码</button>
-            <button id="login" type="submit">注册</button>
+            <button id="register" type="submit">注册</button>
             <br/>
             <a href="login.html">登录</a>
         </div>
     </body>
     <script>
         jQuery(document).ready(function() {
-            $("#login").on("click", function() {
+            $("#register").on("click", function() {
                 var telephone = $("#telephone").val();
+                // var gender
                 var password = $("#password").val();
+                var password_confirm = $("#password_confirm").val();
+                var otp = $("#otp").val();
                 if (telephone == null || telephone == "") {
                     alert("手机号不能为空");
                     return;
@@ -57,14 +60,19 @@
                     alert("手机号长度不合法");
                     return;
                 }
-                if (password == null || password == "") {
+                if (password == null || password == "" || password_comfirm == null || password_comfirm == "") {
                     alert("密码不能为空");
                     return;
                 }
+                if (password != password_comfirm) {
+                    alert("密码不相等");
+                    return;
+                }
+                // otp
                 $.ajax({
                     type:"POST",
                     contentType:"application/x-www-form-urlencoded",
-                    url:"http://localhost:8089/user/login",
+                    url:"http://localhost:8089/user/register",
                     data:{
                         "telephone":telephone,
                         "password":password,
