--- a/web/login.html
+++ b/web/login.html
@@ -51,7 +51,7 @@
                 $.ajax({
                     type:"POST",
                     contentType:"application/x-www-form-urlencoded",
-                    url:"http://localhost:8089/user/login",
+                    url:"http://localhost:8089/stu/login",
                     data:{
                         "telephone":telephone,
                         "password":password,
