--- a/web/login.html
+++ b/web/login.html
@@ -59,7 +59,7 @@
                     xhrFields:{withCredentials:true},
                     success:function(data) {
                         if (data.status == "success") {
-                            window.location.href="platform.html";
+                            window.location.href="index.html";
                         } else {
                             alert("登录失败，因为"+data.data.errorMessage);
                         }
