--- a/web/platform.html
+++ b/web/platform.html
@@ -10,7 +10,7 @@
     <body class="platform">
         <div class="menu" id="menu"></div>
         <div class="free_course">
-            <h1>免费课程</h1>
+            <h1>我的业务</h1>
             <!-- exmaples -->
             <div class="course" id="free_course1">
                 <p class="title">course_name</p>
