--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Course Registration Platform</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/platform_stu.css">
         <script src="js/jquery-1.11.0.min.js" type="text/javascript"></script>
         <script src="js/menu.js" type="text/javascript"></script>
     </head>
@@ -48,7 +49,7 @@
     </body>
     <script>
         window.onload = function() {
-            setMenu();
+            setStuMenu();
         }
 
 
