--- a/web/register.html
+++ b/web/register.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Course Registration Platform</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/login.css">
         <script src="js/jquery-1.11.0.min.js" type="text/javascript"></script>
         <script src="js/btn_role.js" type="text/javascript"></script>
     </head>
