tch create course

--- a/web/platform.html
+++ b/web/platform.html
@@ -11,8 +11,8 @@
     <body class="platform">
         <div class="menu" id="menu"></div>
         <div class="business">
-            <div class="business_item" id="add_course">
-                添加课程&nbsp;&nbsp;&gt;&gt;
+            <div class="business_item" id="create_course">
+                创建课程&nbsp;&nbsp;&gt;&gt;
             </div>
             <div class="business_item" id="my_course">
                 我的课程&nbsp;&nbsp;&gt;&gt;
@@ -50,8 +50,8 @@
                 });
                 return false;
             });
-            $("#add_course").on("click", function() {
-                window.location.href = "add_course.html";
+            $("#create_course").on("click", function() {
+                window.location.href = "create_course.html";
             });
         });
     </script>
