--- a/web/stu/platform.html
+++ b/web/stu/platform.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Course Registration Platform</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/platform_stu.css">
-        <script src="js/jquery-1.11.0.min.js" type="text/javascript"></script>
-        <script src="js/menu.js" type="text/javascript"></script>
+        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="css/platform.css">
+        <script src="../js/jquery-1.11.0.min.js" type="text/javascript"></script>
+        <script src="../js/menu.js" type="text/javascript"></script>
     </head>
     <body class="platform">
         <div class="menu" id="menu"></div>
@@ -51,7 +51,6 @@
         window.onload = function() {
             setStuMenu();
         }
-
 
         jQuery(document).ready(function() {
             $(document).ready(function() {
