--- a/web/tch/create_course.html
+++ b/web/tch/create_course.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Course Registration Platform</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/platform_tch.css">
-        <link rel="stylesheet" href="css/add_course.css">
-        <script src="js/jquery-1.11.0.min.js" type="text/javascript"></script>
-        <script src="js/menu.js" type="text/javascript"></script>
-        <script src="js/navigation.js" type="text/javascript"></script>
+        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="css/platform.css">
+        <link rel="stylesheet" href="css/create_course.css">
+        <script src="../js/jquery-1.11.0.min.js" type="text/javascript"></script>
+        <script src="../js/menu.js" type="text/javascript"></script>
+        <script src="../js/navigation.js" type="text/javascript"></script>
     </head>
     <body class="platform">
         <div class="menu" id="menu"></div>
@@ -18,7 +18,7 @@
             <div class="inputs">
                 <div>
                     课程名<br/>
-                    <input class="input" type="text" name="title" id="title" autocomplete="off">
+                    <input class="input" type="text" name="title" id="title">
                 </div>
                 <div>
                     课程描述<br/>
@@ -128,6 +128,7 @@
                     success:function(data) {
                         if (data.status == "success") {
                             alert("创建课程成功");
+                            window.location.href = "platform.html";
                         } else {
                             alert("创建课程失败，因为"+data.data.errorMessage);
                         }
