--- a/web/stu/platform.html
+++ b/web/stu/platform.html
@@ -55,7 +55,7 @@
         jQuery(document).ready(function() {
             $(document).ready(function() {
                 $.ajax({
-                    type:"POST",
+                    type:"GET",
                     contentType:"application/x-www-form-urlencoded",
                     url:"http://localhost:8089/stu/request",
                     xhrFields:{withCredentials:true},
