--- a/web/tch/create_course.html
+++ b/web/tch/create_course.html
@@ -5,7 +5,7 @@
         <title>Course Registration Platform</title>
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="css/platform.css">
-        <link rel="stylesheet" href="css/create_course.css">
+        <link rel="stylesheet" href="css/module.css">
         <script src="../js/jquery-1.11.0.min.js" type="text/javascript"></script>
         <script src="../js/menu.js" type="text/javascript"></script>
         <script src="../js/navigation.js" type="text/javascript"></script>
@@ -58,7 +58,7 @@
         jQuery(document).ready(function() {
             $(document).ready(function() {
                 $.ajax({
-                    type:"POST",
+                    type:"GET",
                     contentType:"application/x-www-form-urlencoded",
                     url:"http://localhost:8089/tch/request",
                     xhrFields:{withCredentials:true},
