tch modify password

--- a/web/register.html
+++ b/web/register.html
@@ -24,7 +24,7 @@
                 </div>
                 <div>
                     手机号<br/>
-                    <input class="input" type="text" name="telephone" id="telephone" autocomplete="off">
+                    <input class="input" type="text" name="telephone" id="telephone">
                 </div>
                 <div>
                     密码<br/>
