--- a/web/stu/platform.html
+++ b/web/stu/platform.html
@@ -7,13 +7,14 @@
         <link rel="stylesheet" href="css/platform.css">
         <script src="../js/jquery-1.11.0.min.js" type="text/javascript"></script>
         <script src="../js/menu.js" type="text/javascript"></script>
+        <script src="../js/format.js" type="text/javascript"></script>
     </head>
     <body class="platform">
         <div class="menu" id="menu"></div>
-        <div class="free_course">
+        <div class="free_course" id="free_course">
             <h1>免费课程</h1>
-            <!-- exmaples -->
-            <div class="course" id="free_course1">
+            <!-- exmaple -->
+            <!-- <div class="course" id="free_course1">
                 <p class="title">course_name</p>
                 <div class="v1">
                     <p class="start_time">start_time</p>
@@ -25,13 +26,13 @@
                     <p class="sales">sales</p>
                     <p class="tch">tch_name</p>
                 </div>
-            </div>
+            </div> -->
             <a href="free_course">更多免费课程&gt;&gt;</a>
         </div>
-        <div class="paid_course">
+        <div class="paid_course" id="paid_course">
             <h1>付费课程</h1>
-            <!-- exmaples -->
-            <div class="course" id="paid_course1">
+            <!-- exmaple -->
+            <!-- <div class="course" id="paid_course1">
                 <p class="title">course_name</p>
                 <div class="v1">
                     <p class="start_time">start_time</p>
@@ -43,13 +44,30 @@
                     <p class="sales">sales</p>
                     <p class="tch">tch_name</p>
                 </div>
-            </div>
+            </div> -->
             <a href="paid_course">更多付费课程&gt;&gt;</a>
         </div>
     </body>
     <script>
         window.onload = function() {
             setStuMenu();
+        }
+
+        var g_courseList = [];
+
+        function reloadDom() {
+            for (var i = 0; i < g_courseList.length; i++) {
+                var courseVO = g_courseList[i];
+                var dom = "<div data-id='"+courseVO.id+"' class='course' id='item_info"+courseVO.id+"'><p class='title'>"+courseVO.title+"</p><div class='v1'><p class='start_time'>"+getFormatDate(courseVO.startTime)+"</p><p class='duration'>"+getFormatDuration(courseVO.duration)+"</p><p class='price'>"+getFormatPrice(courseVO.price)+"</p></div><div class='v2'><p class='sales'>"+getFormatSales(courseVO.sales)+"</p><p class='tch'>"+courseVO.tchName+"</p></div></div>";
+                if (courseVO.price == 0) {
+                    $("#free_course").append($(dom));
+                } else if (courseVO.price > 0) {
+                    $("#paid_course").append($(dom));
+                }
+                $("#item_info"+courseVO.id).on("click",function(e){
+                    window.location.href="get_course.html?id="+$(this).data("id");
+                });
+            }
         }
 
         jQuery(document).ready(function() {
@@ -65,6 +83,19 @@
                             window.location.href="login.html";
                         }
                         $("#me").text("您好，"+data.data.name);
+                    },
+                    error:function(data){
+                        alert("获取用户登录信息失败，因为 "+data.responseText);
+                    }
+                });
+                $.ajax({
+                    type:"GET",
+                    contentType:"application/x-www-form-urlencoded",
+                    url:"http://localhost:8089/course/list",
+                    xhrFields:{withCredentials:true},
+                    success:function(data){
+                        g_courseList = data.data;
+                        reloadDom();
                     },
                     error:function(data){
                         alert("获取用户登录信息失败，因为 "+data.responseText);
