--- a/web/tch/my_info.html
+++ b/web/tch/my_info.html
@@ -9,7 +9,7 @@
         <script src="../js/jquery-1.11.0.min.js" type="text/javascript"></script>
         <script src="../js/menu.js" type="text/javascript"></script>
         <script src="../js/navigation.js" type="text/javascript"></script>
-        <script src="../js/gender.js" type="text/javascript"></script>
+        <script src="../js/format.js" type="text/javascript"></script>
     </head>
     <body class="platform">
         <div class="menu" id="menu"></div>
