--- a/web/stu/platform.html
+++ b/web/stu/platform.html
@@ -5,14 +5,16 @@
         <title>Course Registration Platform</title>
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="css/platform.css">
+        <link rel="stylesheet" href="css/menu.css">
         <script src="../js/jquery-1.11.0.min.js" type="text/javascript"></script>
         <script src="../js/menu.js" type="text/javascript"></script>
         <script src="../js/format.js" type="text/javascript"></script>
     </head>
     <body class="platform">
         <div class="menu" id="menu"></div>
-        <div class="free_course" id="free_course">
-            <h1>免费课程</h1>
+        <h1>免费课程</h1>
+        <a href="free_course.html">更多免费课程&gt;&gt;</a>
+        <div class="course_preview" id="free_course">
             <!-- exmaple -->
             <!-- <div class="course" id="free_course1">
                 <p class="title">course_name</p>
@@ -27,10 +29,10 @@
                     <p class="tch">tch_name</p>
                 </div>
             </div> -->
-            <a href="free_course">更多免费课程&gt;&gt;</a>
         </div>
-        <div class="paid_course" id="paid_course">
-            <h1>付费课程</h1>
+        <h1>付费课程</h1>
+        <a href="paid_course.html">更多付费课程&gt;&gt;</a>
+        <div class="course_preview" id="paid_course">
             <!-- exmaple -->
             <!-- <div class="course" id="paid_course1">
                 <p class="title">course_name</p>
@@ -45,7 +47,6 @@
                     <p class="tch">tch_name</p>
                 </div>
             </div> -->
-            <a href="paid_course">更多付费课程&gt;&gt;</a>
         </div>
     </body>
     <script>
@@ -58,14 +59,14 @@
         function reloadDom() {
             for (var i = 0; i < g_courseList.length; i++) {
                 var courseVO = g_courseList[i];
-                var dom = "<div data-id='"+courseVO.id+"' class='course' id='item_info"+courseVO.id+"'><p class='title'>"+courseVO.title+"</p><div class='v1'><p class='start_time'>"+getFormatDate(courseVO.startTime)+"</p><p class='duration'>"+getFormatDuration(courseVO.duration)+"</p><p class='price'>"+getFormatPrice(courseVO.price)+"</p></div><div class='v2'><p class='sales'>"+getFormatSales(courseVO.sales)+"</p><p class='tch'>"+courseVO.tchName+"</p></div></div>";
+                var dom = "<div data-id='"+courseVO.id+"' class='course' id='course"+courseVO.id+"'><p class='title'>"+courseVO.title+"</p><div class='v1'><p class='start_time'>"+getFormatDate(courseVO.startTime)+"</p><p class='duration'>"+getFormatDuration(courseVO.duration)+"</p><p class='price'>"+getFormatPrice(courseVO.price)+"</p></div><div class='v2'><p class='sales'>"+getFormatSales(courseVO.sales)+"</p><p class='tch'>"+courseVO.tchName+"</p></div></div>";
                 if (courseVO.price == 0) {
                     $("#free_course").append($(dom));
                 } else if (courseVO.price > 0) {
                     $("#paid_course").append($(dom));
                 }
-                $("#item_info"+courseVO.id).on("click",function(e){
-                    window.location.href="get_course.html?id="+$(this).data("id");
+                $("#course"+courseVO.id).on("click",function(e){
+                    window.location.href="course.html?id="+$(this).data("id");
                 });
             }
         }
@@ -80,7 +81,7 @@
                     success:function(data){
                         if (data.data.errCode == 20003) {
                             alert("用户未登录");
-                            window.location.href="login.html";
+                            window.location.href="../login.html";
                         }
                         $("#me").text("您好，"+data.data.name);
                     },
